--- a/src/main.hbs
+++ b/src/main.hbs
@@ -2,7 +2,7 @@
 
 <li class="menu__item">
     <article class="card">
-        <img src="{{image}}" alt="{{name}}" class="card__image" />
+        <img src="{{image}}" alt="{{name}} class=" card__image" />
         <div class="card__content">
             <h2 class="card__name">{{name}}</h2>
             <p class="card__price">
